// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StandardModal /> should match snapshot with title and body 1`] = `
<body>
  <div />
  <div
    class="modalPortal modalPortalIsOpen"
  >
    <div
      class="modalPanel"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="modalContent"
        role="dialog"
      >
        <article
          class="modal modalSizeStandard"
        >
          <header
            class="header headerWithBorder"
          >
            <button
              aria-label="close"
              class="headerCloseButton"
            >
              <i
                class="root"
                style="width: 20px; height: 20px;"
              >
                <svg
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13.458 12L19 17.543V19h-1.457L12 13.457 6.458 19H5v-1.456L10.544 12 5 6.458V5h1.457L12 10.543 17.544 5H19v1.458L13.458 12z"
                  />
                </svg>
              </i>
            </button>
            <div
              class="headerTitle"
            >
              <h4
                class="root sizeScale4"
              >
                Hello World!
              </h4>
            </div>
          </header>
          <main
            class="content"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis neque a laoreet maximus. Vestibulum hendrerit quam at mi venenatis faucibus at vel nisi. In ut risus et ipsum tincidunt tempor. Suspendisse potenti. Praesent faucibus posuere risus, at congue mauris porttitor ut. Donec sit amet elit vitae purus dictum aliquet quis ut ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dui sapien, porttitor ac erat vel, malesuada rutrum mauris. Nam arcu tellus, pretium ut aliquet eget, ultrices vel est. Maecenas dapibus volutpat eros a volutpat.
            </p>
          </main>
        </article>
      </div>
    </div>
  </div>
</body>
`;

exports[`<StandardModal /> should match snapshot without title and body 1`] = `
<body>
  <div />
  <div
    class="modalPortal modalPortalIsOpen"
  >
    <div
      class="modalPanel"
    >
      <div
        aria-hidden="false"
        aria-modal="true"
        class="modalContent"
        role="dialog"
      >
        <article
          class="modal modalSizeStandard"
        >
          <header
            class="header headerWithBorder"
          >
            <button
              aria-label="close"
              class="headerCloseButton"
            >
              <i
                class="root"
                style="width: 20px; height: 20px;"
              >
                <svg
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13.458 12L19 17.543V19h-1.457L12 13.457 6.458 19H5v-1.456L10.544 12 5 6.458V5h1.457L12 10.543 17.544 5H19v1.458L13.458 12z"
                  />
                </svg>
              </i>
            </button>
            <div
              class="headerTitle"
            >
              <h4
                class="root sizeScale4"
              />
            </div>
          </header>
          <main
            class="content"
          />
        </article>
      </div>
    </div>
  </div>
</body>
`;
